# ELECTRIC

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  environment.yaml  genindex.html  index.html  installation.html  objects.inv  paper.bib  paper.md  search.html  searchindex.js  tutorial.html  usage.html
.github/workflows/: ci.yml  sphinx_build.yml
ELECTRIC/: CMakeLists.txt  ELECTRIC.py  residue_report.py  test_driver_functions.py  util.py
ELECTRIC/mdi/: README.md
ELECTRIC/mdi/docs/html/: structlibrary__data__struct-members.html
ELECTRIC/pytest/: CMakeLists.txt  test_driver_functions.py
ELECTRIC/pytest/bench5/: bench5.arc  bench5.key  no_ewald.key  ref_totfield.csv  test_simulation.py
MDI_EF_Analysis/: CMakeLists.txt  MDI_EF_Analysis.cpp  MDI_EF_Analysis.py  test_driver_functions.py  util.py
MDI_EF_Analysis/pytest/bench5/: ref_totfield.csv  test_simulation.py
_sources/: index.rst.txt  installation.rst.txt  tutorial.rst.txt  usage.rst.txt
docs/: conf.py  index.rst  installation.rst  requirements.txt  tutorial.rst  usage.rst
docs/_ext/: dataTables.py  moleculeView.py
docs/data/: 78_and_93.csv  ef_components.csv  proj_totfield.csv
lib/: CMakeLists.txt
sample_analysis/: README.md  calculate_average.py  proj_totfield.csv
test/bench5/: cori.sh  cori5.sh  ref  tcp.sh
test/bench5/data/: bench5.arc  bench5.key
test/bench9/: tcp.sh
test/bench9/data/: no_ewald.key
test/locations/: ELECTRIC  MDI_EF_Analysis  Tinker  Tinker_ELECTRIC
test/traj/: tcp.sh
test/traj/data/: amoebapro13_lig_v3.2.prm  dyn.key  no_ewald.key  traj_out.051
